--- a/vaadin/src/main/resources/application.properties
+++ b/vaadin/src/main/resources/application.properties
@@ -1,18 +1,13 @@
-vaadin.launch-browser=true
-spring.application.name=vaadin
-# BD PostgreSQL
+# PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate
 spring.datasource.username=postgres
 spring.datasource.password=islam
-
-# Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+# Vaadin
+vaadin.launch-browser=true
+
+# logging SQL
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.transaction=DEBUG
